GearsetPOC/force-app/main/default/objects/Favourite_Traveller__c/Favourite_Traveller__c.object-meta.xml
<CustomObject>
    <label>Favourite Traveller</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favourite Travellers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>