GearsetPOC/force-app/main/default/objects/Favourite_Traveller__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Master Detail relationship with the customer</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Favourite Travellers</relationshipLabel>
    <relationshipName>Favourite_Travellers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>