GearsetPOC/force-app/main/default/objects/Favourite_Traveller__c/fields/Meal_Preference__c.field-meta.xml
<CustomField>
    <fullName>Meal_Preference__c</fullName>
    <description>Meal preference of favourite traveller</description>
    <label>Meal Preference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>