GearsetPOC/force-app/main/default/objects/Favourite_Traveller__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <description>Membership number of favourite traveller</description>
    <label>Membership Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>