GearsetPOC/force-app/main/default/objects/Favourite_Traveller__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Phone number of favourite traveller</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>