GearsetPOC/force-app/main/default/objects/Favourite_Traveller__c/fields/Seat_Preference__c.field-meta.xml
<CustomField>
    <fullName>Seat_Preference__c</fullName>
    <description>Seat preference of favourite traveller</description>
    <label>Seat Preference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>