GearsetPOC/force-app/main/default/objects/Favourite_Traveller__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>To allow customers to order their favourite travellers in order of preference, or to allow future automatic sorting by usage</description>
    <label>Sort Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>